--- a/tweets/templates/tweets/form.html
+++ b/tweets/templates/tweets/form.html
@@ -1,1 +1,4 @@
-<h1>H1</h1>
+<form class="form" method="POST" action="">
+    {% csrf_token %} {{ form.as_p }}
+    <input type="submit" value="{{ btn_title }}" />
+</form>
