--- a/tweets/templates/tweets/detail_view.html
+++ b/tweets/templates/tweets/detail_view.html
@@ -1,8 +1,13 @@
-<h1>{{ object.content }}</h1>
-<br />
-{{ object.user }}
-<br />
-{{ object.timestamp }}
-<br />
-{{ object.timestamp|timesince }}
-<br />
+{% extends 'base.html' %}
+
+
+{% block content %}
+    <h1>{{ object.content }}</h1>
+    <br />
+    {{ object.user }}
+    <br />
+    {{ object.timestamp }}
+    <br />
+    {{ object.timestamp|timesince }}
+    <br />
+{% endblock content %}
