--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -1,21 +1,26 @@
-{% include 'tweets/search_form.html' %}
-<br />
-{% for obj in object_list %}
-    PK: {{ obj.pk }}
+{% extends 'base.html' %}
+
+
+{% block content %}
+    {% include 'tweets/search_form.html' %}
     <br />
-    Content: {{ obj.content }}
-    <br />
-    User: {{ obj.user }}
-    <br />
-    Timestamp: {{ obj.timestamp }}
-    <br />
-    Timesince: {{ obj.timestamp|timesince }} ago
-    <br />
-    <br />
-{% empty %}
-    {% if request.GET.q %}
-    <p>No tweets found.</p>
-    {% else %}
-    <p>No tweets yet.</p>
-    {% endif %}
-{% endfor %}
+    {% for obj in object_list %}
+        PK: {{ obj.pk }}
+        <br />
+        Content: {{ obj.content }}
+        <br />
+        User: {{ obj.user }}
+        <br />
+        Timestamp: {{ obj.timestamp }}
+        <br />
+        Timesince: {{ obj.timestamp|timesince }} ago
+        <br />
+        <br />
+    {% empty %}
+        {% if request.GET.q %}
+        <p>No tweets found.</p>
+        {% else %}
+        <p>No tweets yet.</p>
+        {% endif %}
+    {% endfor %}
+{% endblock content %}
