--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -2,25 +2,37 @@
 
 
 {% block content %}
-    {% include 'tweets/search_form.html' %}
-    <br />
-    {% for obj in object_list %}
-        PK: {{ obj.pk }}
-        <br />
-        Content: {{ obj.content }}
-        <br />
-        User: {{ obj.user }}
-        <br />
-        Timestamp: {{ obj.timestamp }}
-        <br />
-        Timesince: {{ obj.timestamp|timesince }} ago
-        <br />
-        <br />
-    {% empty %}
-        {% if request.GET.q %}
-        <p>No tweets found.</p>
-        {% else %}
-        <p>No tweets yet.</p>
-        {% endif %}
-    {% endfor %}
+
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+        {% include 'tweets/search_form.html' %}
+        {% for obj in object_list %}
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        {% if obj.image %}
+                            <img class="media-object" src="..." alt="...">
+                        {% endif %}
+                    </a>
+                </div>
+                <div class="media-body">
+                        PK: {{ obj.pk }}
+                        <br />
+                        {{ obj.content }}
+                        <br /> 
+                        via {{ obj.user }} | {{ obj.timestamp|timesince }} ago |
+                        <!-- get_absolute_url está setado em models.py -->
+                        <a href="{{ obj.get_absolute_url }}">View</a>
+                </div>
+            </div>
+            <hr />
+            {% empty %}
+            {% if request.GET.q %}
+            <p>No tweets found.</p>
+            {% else %}
+            <p>No tweets yet.</p>
+            {% endif %}
+        {% endfor %}
+        </div>
+    </div>
 {% endblock content %}
