--- a/tweets/templates/tweets/search_form.html
+++ b/tweets/templates/tweets/search_form.html
@@ -1,12 +1,8 @@
-<div class="row">
-    <div class="col-sm-12 text-center">
-        <form class="form-inline" method="GET" action="{% url 'tweet:list' %}" >
-            <div class="form-group">
-                {% comment %} <label for="q">Search</label> {% endcomment %}
-                <input class="form-control" type="text" name="q" placeholder="Your Search"
-                autofocus value="{{ request.GET.q }}" />
-            </div>
-            <input class="btn btn-default" type="submit" value="Search" />
-        </form>
+<form class="navbar-form navbar-left" method="GET" action="{% url 'tweet:list' %}">
+    <div class="form-group">
+        {% comment %}
+        <label for="q">Search</label> {% endcomment %}
+        <input class="form-control" type="text" name="q" placeholder="Your Search" autofocus value="{{ request.GET.q }}" />
     </div>
-</div>
+    <input class="btn btn-default" type="submit" value="Search" />
+</form>
