--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -2,26 +2,26 @@
 
 
 {% block content %}
-
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-3 col-xs-12" style="background-color: red;">
+        <h1> {{ object.user }} </h1>
+    </div>
+    <div class="col-sm-9">
         {% for obj in object_list %}
             <div class="media">
                 <div class="media-left">
-                    <a href="#">
+                    <a href="">
                         {% if obj.image %}
                             <img class="media-object" src="..." alt="...">
                         {% endif %}
                     </a>
                 </div>
                 <div class="media-body">
-                        PK: {{ obj.pk }}
-                        <br />
-                        {{ obj.content }}
-                        <br /> 
-                        via {{ obj.user }} | {{ obj.timestamp|timesince }} ago |
-                        <!-- get_absolute_url está setado em models.py -->
-                        <a href="{{ obj.get_absolute_url }}">View</a>
+                    {{ obj.content }}
+                    <br />
+                    <br /> via {{ obj.user }} | {{ obj.timestamp|timesince }} ago |
+                    <!-- get_absolute_url está setado em models.py -->
+                    <a href="{{ obj.get_absolute_url }}">View</a>
                 </div>
             </div>
             <hr />
@@ -31,7 +31,7 @@
             {% else %}
             <p>No tweets yet.</p>
             {% endif %}
-        {% endfor %}
-        </div>
+            {% endfor %}
     </div>
+</div>
 {% endblock content %}
