--- a/tweets/templates/tweets/search_form.html
+++ b/tweets/templates/tweets/search_form.html
@@ -2,7 +2,8 @@
     <div class="form-group">
         {% comment %}
         <label for="q">Search</label> {% endcomment %}
-        <input class="form-control" type="text" name="q" placeholder="Your Search" autofocus value="{{ request.GET.q }}" />
+        <input class="form-control" type="text" name="q" autofocus
+            placeholder="Your Search" value="{{ request.GET.q }}" />
     </div>
     <input class="btn btn-default" type="submit" value="Search" />
 </form>
