--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -3,10 +3,19 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-sm-3 col-xs-12" style="background-color: red;">
+    <div class="col-sm-3 col-xs-12" style="background-color: #aaa;">
         <h1> {{ request.user }} </h1>
     </div>
     <div class="col-sm-9">
+
+        {% if not request.GET.q %}
+            <div class="">
+                <!-- form=create_form vem da funçao get_context_data em /tweets/views.py -->
+                {% include 'tweets/form.html' with form=create_form action_url=create_url btn_title='Tweet' %}
+            </div>
+            <hr />
+        {% endif %}
+
         {% for obj in object_list %}
         <div class="media">
             <div class="media-left">
