--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -2,31 +2,64 @@
 
 {% block script %}
     <script>
+
+        // https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript/901144#901144
+        function getParameterByName(name, url) {
+                if (!url) {
+                    url = window.location.href;
+                }
+                name = name.replace(/[\[\]]/g, "\\$&");
+                var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+                    results = regex.exec(url);
+                if (!results) return null;
+                if (!results[2]) return '';
+                return decodeURIComponent(results[2].replace(/\+/g, " "));
+            }
+
         $(document).ready(function(){
             console.log('Working!');            
             
-            $.ajax({
-                // url: "{% url 'tweet-api:list' %}", // formato de template do django
-                url: "/api/tweet/",
-                method: "GET",
-                success: function(data){
-                    // console.log("sucesso!");
-                    // console.log(data);
-                    $.each(data, function(key, value){
+            var query = getParameterByName('q');
+            var tweetList = [];
+
+            function parseTweets() {
+                if (tweetList == 0) {
+                    $('#tweet-container').text("No tweets currently found.")
+                } else {
+                    // tweets exist, parse & display them
+                    $.each(tweetList, function (key, value) {
                         var tweetKey = key;
                         var tweetContent = value.content;
                         var tweetUser = value.user;
                         $('#tweet-container').append(
                             "<div class=\"media\">\
-                                <div class=\"media-body\">" 
-                                + tweetContent
-                                + "<br />via " + tweetUser.username + " | "
-                                + "<a href='#'>View</a>"
-                                + "</div>\
-                            </div>\
-                            <br /><hr />"
+                                    <div class=\"media-body\">"
+                            + tweetContent
+                            + "<br />via " + tweetUser.username + " | "
+                            + "<a href='#'>View</a>"
+                            + "</div>\
+                                </div>\
+                                <br /><hr />"
                         )
                     })
+                }
+            }
+
+            $.ajax({
+                // url: "{% url 'tweet-api:list' %}", // formato de template do django
+                url: "/api/tweet/",
+                data: {
+                    "q": query
+                },
+                method: "GET",
+                success: function(data){
+                    // console.log("sucesso!");
+                    // console.log(data);
+                    tweetList = data
+                    parseTweets();
+                    
+
+                    
                 },
                 error: function(data){
                     console.log("error");
@@ -59,33 +92,7 @@
         
         </div>
 
-        {% for obj in object_list %}
-        <div class="media">
-            <div class="media-left">
-                <a href="#">
-                    {% if obj.image %}
-                        <img class="media-object" src="..." alt="...">
-                    {% endif %}
-                </a>
-            </div>
-            <div class="media-body">
-                PK: {{ obj.pk }}
-                <br />
-                {{ obj.content }}
-                <br />
-                via {{ obj.user }} | {{ obj.timestamp|timesince }} ago |
-                <!-- get_absolute_url está setado em models.py -->
-                <a href="{{ obj.get_absolute_url }}">View</a>
-            </div>
-            <hr />
-        </div>
-        {% empty %}
-            {% if request.GET.q %}
-            <p>No tweets found.</p>
-            {% else %}
-            <p>No tweets yet.</p>
-            {% endif %}
-        {% endfor %}
+        
     </div>
 </div>
 
