--- a/tweets/templates/tweets/tweet_list.html
+++ b/tweets/templates/tweets/tweet_list.html
@@ -17,7 +17,7 @@
             }
 
         $(document).ready(function(){
-            console.log('Working!');            
+            // console.log('Working!');            
             
             var query = getParameterByName('q');
             var tweetList = [];
@@ -45,28 +45,59 @@
                 }
             }
 
-            $.ajax({
-                // url: "{% url 'tweet-api:list' %}", // formato de template do django
-                url: "/api/tweet/",
-                data: {
-                    "q": query
-                },
-                method: "GET",
-                success: function(data){
-                    // console.log("sucesso!");
-                    // console.log(data);
-                    tweetList = data
-                    parseTweets();
-                    
+            function fetchTweets(){
+                console.log("fetching.....")
+                $.ajax({
+                    // url: "{% url 'tweet-api:list' %}", // formato de template do django
+                    url: "/api/tweet/",
+                    data: {
+                        "q": query
+                    },
+                    method: "GET",
+                    success: function (data) {
+                        // console.log("sucesso!");
+                        // console.log(data);
+                        tweetList = data
+                        parseTweets();
 
-                    
-                },
-                error: function(data){
-                    console.log("error");
-                    console.log(data);
-                }
-            });
 
+
+                    },
+                    error: function (data) {
+                        console.log("error");
+                        console.log(data);
+                    }
+                })
+            }
+
+            fetchTweets()
+
+            $('#tweet-form').submit(function(event){
+                event.preventDefault()
+
+                var this_ = $(this)
+                // console.log(event)
+                // console.log(this_.serialize())
+                var formData = this_.serialize()
+                
+                $.ajax({
+                    url: "/api/tweet/create/",
+                    data: formData,
+                    method: "POST",
+                    success: function (data) {
+                        console.log(data)
+                        fetchTweets()
+                        // tweetList = data
+                        // parseTweets();
+                    },
+                    error: function (data) {
+                        console.log("error");
+                        console.log(data.statusText);
+                        console.log(data.status)
+                    }
+                })
+
+            })
         });
     </script>    
 {% endblock script %}
@@ -83,7 +114,7 @@
         {% if not request.GET.q %}
             <div class="">
                 <!-- form=create_form vem da funçao get_context_data em /tweets/views.py -->
-                {% include 'tweets/form.html' with form=create_form action_url=create_url btn_title='Tweet' %}
+                {% include 'tweets/form.html' with form=create_form action_url=create_url btn_title='Tweet' form_id='tweet-form' %}
             </div>
             <hr />
         {% endif %}
