--- a/tweets/templates/tweets/form.html
+++ b/tweets/templates/tweets/form.html
@@ -1,7 +1,6 @@
 {% load crispy_forms_tags %}
-<form 
-{% if form_id %} id="{{ form_id }}" {% endif %}
-    class="form" method="POST" action="{% if action_url %} {{ action_url }} {% endif %}">
+<form {% if form_id %} id="{{ form_id }}" {% endif %}
+        class="form" method="POST" action="{% if action_url %} {{ action_url }} {% endif %}">
     {% csrf_token %}
     {% comment %} {{ form.as_p }} {% endcomment %}
     {{ form|crispy }}
